--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <img src="img/perfil.jpg" alt="Lobo Cinza" width="360" height="520">
     <div>
       <h1>Desenvolvedor <br> Front End & <br> UI Designer</h1>
-      <p>Localizado no Rio de Janeiro</p>
+      <p>Localizado no Rio de Janeiro 🏖</p>
     </div>
   </main>
   <section class="experiencia" id="experiencia" aria-label="Experiência">
@@ -79,7 +79,7 @@
     <div class="formacao-container">
       <h2 class="subtitulo">Formação</h2>
       <div>
-        <p class="formacao-texto">Minha mais recente experiêcnia acadêmica foi o <strong>mestrado</strong> que fiz no exterior em <strong>UX Design</strong>. Além disso me mantenho sempre atualizado com cursos intensivos online.
+        <p class="formacao-texto">Minha mais recente experiêcnia acadêmica foi o <strong>mestrado</strong> 🎓 que fiz no exterior em <strong>UX Design</strong>. Além disso me mantenho sempre atualizado com cursos intensivos online.
         </p>
         <ul class="faculdade-lista">
           <li class="faculdade">
